@@ -37,7 +37,7 @@ clust <- function (data, u, tim.cond = 1, clust.max = FALSE, plot = FALSE,
   
   if (all(obs <= u)) 
     stop("No data above the threshold !!!")
-  clust <- .C("do_clust", n, as.double(obs),
+  clust <- .C(POT_do_clust, n, as.double(obs),
               as.double(tim), as.double(tim.cond), 
               as.double(u), clust = double(2 * n))$clust
   clust <- clust[clust != 0]
