@@ -35,7 +35,7 @@ samlmu <- function (x, nmom = 4, sort.data = TRUE)
   if (sort.data == TRUE) xok <- sort(xok)
   nmom.actual <- min(nmom, n)
   
-  lmom <- .C("do_samlmu", as.double(xok), as.integer(nmom.actual),
+  lmom <- .C(POT_do_samlmu, as.double(xok), as.integer(nmom.actual),
              as.integer(n), lmom = double(nmom.actual))$lmom
   names(lmom) <- rnames
   return(lmom)
